# p2p_network

./: CMakeLists.txt  input.txt  main.cpp
include/: network.h
lib/json/: CMakeLists.txt  ChangeLog.md
lib/json/cmake/: ci.cmake
lib/json/doc/mkdocs/docs/home/: releases.md
lib/json/include/nlohmann/detail/conversions/: to_chars.hpp
lib/json/single_include/nlohmann/: json.hpp
src/: Client.cpp  PeerToPeer.cpp  Protocol.cpp  Server.cpp
